Refactored MyDateTimeInput: VTextField for time, currency selection, and locale message updates (Vuetify 3)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,7 +8,10 @@
     "description": "Item Description",
     "category": "Expense Category",
     "datetime": "Purchase Date & Time",
+    "date": "Date",
+    "time": "Time",
     "amount": "Total Amount Spent",
+    "currency": "Money Currency",
     "location": "Purchase Location"
   },
   "categories": {
