feat: Add geolocation capabilities and expense position input
* Added support for geocoding and displaying location on map
* Created reusable components for geocoder input and geolocation map
* Implemented logic to update expense position based on user input
* Updated translations
* Updated dependencies and configuration for geocoding functionality

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,6 +14,9 @@
     "currency": "Money Currency",
     "location": "Purchase Location"
   },
+  "geolocation": {
+    "searchPosition": "Search By Address"
+  },
   "categories": {
     "clothing": "Clothing",
     "entertainment": "Entertainment",
